# cicd_study_refo

./: README.md  dockerfile  pyproject.toml
.github/workflows/: main.yml
deploy/: appspec.yaml
