[tool.poetry]
name = "code-deploy"
version = "0.1.0"
description = ""
authors = ["jaewoong Ko <jaewoong.ko@nueyne.com>"]
readme = "README.md"
packages = [{include = "code_deploy"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
